--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.2",
+    "dotenv": "^5.0.1",
     "mongoose": "^5.0.15",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
